@@ -2,6 +2,8 @@
 
 	* w3m.el (w3m-fontify-anchors): Local file is given special
 	treatment for `href'. Fix match data of `href'.
+	(w3m-view-this-url-1): If the points of window was treated in
+	w3m-goto-url(), now reconstruct window configuration.
 	
 2004-12-16  Katsumi Yamaoka  <yamaoka@jpl.org>
 
